// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component action negative 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="znlu3l-6gd0e6 znlu3l-xe265e znlu3l-1qr77c8 znlu3l-5n5obt znlu3l-18jpc09"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr znlu3l-1996vl6 znlu3l-1vrz3gw znlu3l-r3cqrx znlu3l-11hczkh znlu3l-197pp75"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component action positive 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="znlu3l-6gd0e6 znlu3l-lxtrsj znlu3l-1qr77c8 znlu3l-5n5obt znlu3l-15m3xlk"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr znlu3l-1996vl6 znlu3l-3noqo9 znlu3l-r3cqrx znlu3l-11hczkh znlu3l-1tthglh"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component action primary 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="znlu3l-6gd0e6 znlu3l-58zsu5 znlu3l-1qr77c8 znlu3l-5n5obt znlu3l-upz7x2"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr znlu3l-1996vl6 znlu3l-7s6zs0 znlu3l-r3cqrx znlu3l-11hczkh znlu3l-1b07oxx"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component action secondary 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="znlu3l-6gd0e6 znlu3l-76xr8r znlu3l-1qr77c8 znlu3l-5n5obt znlu3l-14bfgb"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr znlu3l-1996vl6 znlu3l-6l3x5l znlu3l-r3cqrx znlu3l-11hczkh znlu3l-1xgarii"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size lg 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="znlu3l-6gd0e6 znlu3l-58zsu5 znlu3l-1qr77c8 znlu3l-168ejle znlu3l-upz7x2"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr znlu3l-1996vl6 znlu3l-7s6zs0 znlu3l-r3cqrx znlu3l-16we7vb znlu3l-1b07oxx"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size md 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="znlu3l-6gd0e6 znlu3l-58zsu5 znlu3l-1qr77c8 znlu3l-5n5obt znlu3l-upz7x2"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr znlu3l-1996vl6 znlu3l-7s6zs0 znlu3l-r3cqrx znlu3l-11hczkh znlu3l-1b07oxx"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size sm 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="znlu3l-6gd0e6 znlu3l-58zsu5 znlu3l-1qr77c8 znlu3l-k1vcwv znlu3l-upz7x2"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr znlu3l-1996vl6 znlu3l-7s6zs0 znlu3l-r3cqrx znlu3l-1q2dyj6 znlu3l-1b07oxx"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size xl 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="znlu3l-6gd0e6 znlu3l-58zsu5 znlu3l-1qr77c8 znlu3l-5kwyn3 znlu3l-upz7x2"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr znlu3l-1996vl6 znlu3l-7s6zs0 znlu3l-r3cqrx znlu3l-1cd3x4v znlu3l-1b07oxx"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size xs 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="znlu3l-6gd0e6 znlu3l-58zsu5 znlu3l-1qr77c8 znlu3l-14msekw znlu3l-upz7x2"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr znlu3l-1996vl6 znlu3l-7s6zs0 znlu3l-r3cqrx znlu3l-7r3sa2 znlu3l-1b07oxx"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component variant link 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="znlu3l-6gd0e6 znlu3l-58zsu5 znlu3l-q0taf9 znlu3l-5n5obt znlu3l-n2zv0u"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr znlu3l-1996vl6 znlu3l-7s6zs0 znlu3l-11hczkh"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component variant outline 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="znlu3l-6gd0e6 znlu3l-58zsu5 znlu3l-1cqu5g znlu3l-5n5obt znlu3l-4s28py"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr znlu3l-1996vl6 znlu3l-7s6zs0 znlu3l-11hczkh"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component variant solid 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="znlu3l-6gd0e6 znlu3l-58zsu5 znlu3l-1qr77c8 znlu3l-5n5obt znlu3l-upz7x2"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr znlu3l-1996vl6 znlu3l-7s6zs0 znlu3l-r3cqrx znlu3l-11hczkh znlu3l-1b07oxx"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;
